# box_renderer

./: CMakeLists.txt  main.cpp
example/: scene.json
source/: Box.cpp  Box.h  BoxStyle.cpp  BoxStyle.h  Bvh.h  Camera.cpp  Camera.h  Renderer.cpp  Renderer.h  Scalar.h  Scene.cpp  Scene.h  Texture.cpp  Texture.h  Utility.cpp  Utility.h  stb.c
